Home/Deportes/Tendencias + Detalle (texto/expandir/relacionadas) + manejo de imágenes (ArticleImage + assets) + header emol/Drawer + AndroidManifest + pubspec + .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,34 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
+# Flutter/Dart
 .dart_tool/
-.flutter-plugins-dependencies
+.packages
 .pub-cache/
-.pub/
-/build/
-/coverage/
+.flutter-plugins
+.flutter-plugins-dependencies
 
-# Symbolication related
-app.*.symbols
+# Builds
+build/
+**/GeneratedPluginRegistrant.*
+**/flutter_export_environment.sh
 
-# Obfuscation related
-app.*.map.json
+# iOS/macOS
+ios/Pods/
+ios/.symlinks/
+macos/Pods/
+macos/Flutter/Flutter-*.xcconfig
+macos/Flutter/GeneratedPluginRegistrant.swift
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Android
+android/.gradle/
+android/**/local.properties
+*.iml
+
+# IDE
+.idea/
+.vscode/
+
+# SO
+.DS_Store
+Thumbs.db
+
+# Duplicados accidentales con sufijo “ 2”
+* 2/
